test/libsolidity/syntaxTests/dataLocations/privateFunction/private_function_return_parameters_no_data_location.sol
contract C {
    function f() private pure returns(uint[]) {}
}
// ----
// TypeError: (51-57): Storage location must be "storage" or "memory" for parameter in private function, but none was given.
